--- a/app/admin/blocks/blocks.html
+++ b/app/admin/blocks/blocks.html
@@ -8,6 +8,8 @@ Blocks - Prototype
 <p><a class="link-back" href="/admin/blocks">Back to block types</a></p>
 <h1 class="{{ govukClassname('heading-large') }}">{{ _blockType }} blocks</h1>
 
+<p><a href="/admin/blocks/{{_blockType}}/new">Create new {{_blockType}} block</a></p>
+
 <ul class="{{ govukClassname('list-bullet') }}">
 {% for key in keys %}
 <li><a href="/admin/block/{{ key }}">{{ key }}</a></li>
