Handle arrays of objects (when specified by schema)

--- a/app/admin/block/block.html
+++ b/app/admin/block/block.html
@@ -38,11 +38,15 @@ Create new {{ block }} block
 {% set rawBlock = getBlockRaw(block) %}
 {% set blockProp = rawBlock[prop] %}
 {% set blockPropType = typeof(blockProp ) %}
+{% if schemaProperties[prop] %}
+{% set blockPropType = schemaProperties[prop].type %}
+{% endif %}
 {% set propBlockRef = '' %}
 {% if blockPropType == 'string' %}
 {% set propBlockRef = getBlockProp(blockProp, '_id') %}
 {% endif %}
-<li class="blockProp">{% if prop != 'depends' %}<a href="/admin/block/{{ block }}/{{ prop }}">{% endif %}{{ prop }}{% if not requiredProps[prop] %} <small class="optional">(optional)</small>{% endif %}{% if prop != 'depends' %}</a>{% endif %}
+<li class="blockProp">{% if prop != 'xdepends' %}<a href="/admin/block/{{ block }}/{{ prop }}">{% endif %}{{ prop }}{% if not requiredProps[prop] %} <small class="optional">(optional)</small>{% endif %}{% if prop != 'xdepends' %}</a>{% endif %}
+{{blockPropType}}
 <small class="blockProp__value">
 {% if prop == 'depends' %}
 {{ blockProp | json | replace('[{"', '')  | replace('}]', '') | replace('":', ':') }}
