--- a/app/admin/prop/prop.html
+++ b/app/admin/prop/prop.html
@@ -9,7 +9,7 @@
 {% set _blockType = getBlockProp(block, '_blockType') %}
 {% endif %}
 {# <p><a class="link-back" href="/admin/blocks/{{ _blockType }}">Back to {{ _blockType }} blocks</a></p> #}
-<p><a class="link-back" href="/admin/block/{{ block }}">Back to <strong>{{ block }}</strong></a></p>
+<p class="edit-link-back"><a class="link-back" href="/admin/block/{{ block }}">Back to <strong>{{ block }}</strong></a></p>
 
 <h1 class="{{ govukClassname('heading-large') }}"><a class="header-link-back" href="/admin/block/{{ block }}">{{ block }}</a>{% if prop %}.{{ prop }}{% endif %}</h1>
 
@@ -86,4 +86,34 @@
 </form>
 {% endif %}
 
+{% endblock %}
+
+{% block body_end %}
+{{ super() }}
+<script>
+if (window !== window.parent) {
+  jQuery('.admin-actions button').on('click', function(e) {
+    e.preventDefault()
+    e.stopPropagation()
+    var $button = jQuery(this)
+    var $form = jQuery('form')
+    var name = $button.attr('name')
+    var value = $button.attr('value')
+    var action = $form.attr('action') || document.location.href
+    var serialized = $form.serialize()
+    if (name) {
+      serialized += `&name=${name}&value=${value}`
+    }
+    jQuery.ajax({
+      type: "POST",
+      url: action,
+      data: serialized,
+      success: function(res, d) {
+        // console.log({res, d})
+        window.parent.jQuery('#frame-close').click()
+      }
+    })
+  })
+}
+</script>
 {% endblock %}
