Allow views to determine their own init (and other) properties

--- a/app/admin/prop/prop.html
+++ b/app/admin/prop/prop.html
@@ -102,7 +102,7 @@ if (window !== window.parent) {
     var action = $form.attr('action') || document.location.href
     var serialized = $form.serialize()
     if (name) {
-      serialized += `&name=${name}&value=${value}`
+      serialized += `&${name}=${value}`
     }
     jQuery.ajax({
       type: "POST",
